--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Lucas' Website update</p>
+    <p>Lucas' Website </p>
     <ul>
         <li><a href="TagsElementsDOM.html">Tags, Elements, and the DOM Homework</a></li>
     </ul>
